parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PUNT_COMA vars function MAIN block
Rule 2     vars -> VARS var_list
Rule 3     vars -> empty
Rule 4     var_list -> var_list COMA var
Rule 5     var_list -> var PUNT_COMA
Rule 6     var -> type ID
Rule 7     var -> type LEFTSQUARE NUMBER RIGHTSQUARE ID
Rule 8     type -> INT
Rule 9     type -> FLOT
Rule 10    type -> CHAR
Rule 11    type -> VOID
Rule 12    empty -> <empty>
Rule 13    function -> FUNCTION type ID LEFTPAREN param_list RIGHTPAREN vars block
Rule 14    param_list -> param_list COMA param
Rule 15    param_list -> param
Rule 16    param_list -> empty
Rule 17    param -> INT ID
Rule 18    param -> FLOT ID
Rule 19    param -> CHAR ID
Rule 20    block -> LEFTCURLY statement_list RIGHTCURLY
Rule 21    statement_list -> statement_list statement
Rule 22    statement_list -> statement
Rule 23    statement -> assignment
Rule 24    statement -> function_call
Rule 25    statement -> return_statement
Rule 26    statement -> read_statement
Rule 27    statement -> write_statement
Rule 28    statement -> decision_statement
Rule 29    statement -> repetition_statement
Rule 30    statement -> vars
Rule 31    assignment -> ID EQUALS expr PUNT_COMA
Rule 32    assignment -> ID LEFTSQUARE expr RIGHTSQUARE EQUALS expr PUNT_COMA
Rule 33    function_call -> ID LEFTPAREN arg_list RIGHTPAREN PUNT_COMA
Rule 34    function_call -> ID LEFTPAREN RIGHTPAREN PUNT_COMA
Rule 35    arg_list -> arg_list COMA expr
Rule 36    arg_list -> expr
Rule 37    return_statement -> RETURN expr PUNT_COMA
Rule 38    return_statement -> RETURN PUNT_COMA
Rule 39    read_statement -> READ LEFTPAREN ID RIGHTPAREN PUNT_COMA
Rule 40    write_statement -> WRITE LEFTPAREN expr RIGHTPAREN PUNT_COMA
Rule 41    write_statement -> WRITE LEFTPAREN RIGHTPAREN PUNT_COMA
Rule 42    decision_statement -> IF LEFTPAREN expr RIGHTPAREN THEN block
Rule 43    decision_statement -> IF LEFTPAREN expr RIGHTPAREN THEN block ELSE block
Rule 44    repetition_statement -> FOR ID EQUALS expr TO expr DO block
Rule 45    repetition_statement -> WHILE LEFTPAREN expr RIGHTPAREN DO block
Rule 46    expr -> expr PLUS expr
Rule 47    expr -> expr MINUS expr
Rule 48    expr -> expr MULT expr
Rule 49    expr -> expr DIV expr
Rule 50    expr -> expr AND expr
Rule 51    expr -> expr OR expr
Rule 52    expr -> expr LESS_THAN expr
Rule 53    expr -> expr MORE_THAN expr
Rule 54    expr -> expr EQUAL_TO expr
Rule 55    expr -> LEFTPAREN expr RIGHTPAREN
Rule 56    expr -> MINUS expr
Rule 57    expr -> NUMBER
Rule 58    expr -> ID

Terminals, with rules where they appear

AND                  : 50
CHAR                 : 10 19
COMA                 : 4 14 35
DIV                  : 49
DO                   : 44 45
ELSE                 : 43
EQUALS               : 31 32 44
EQUAL_TO             : 54
FLOT                 : 9 18
FOR                  : 44
FUNCTION             : 13
ID                   : 1 6 7 13 17 18 19 31 32 33 34 39 44 58
IF                   : 42 43
INT                  : 8 17
LEFTCURLY            : 20
LEFTPAREN            : 13 33 34 39 40 41 42 43 45 55
LEFTSQUARE           : 7 32
LESS_THAN            : 52
MAIN                 : 1
MINUS                : 47 56
MORE_THAN            : 53
MULT                 : 48
NUMBER               : 7 57
OR                   : 51
PLUS                 : 46
PROGRAM              : 1
PUNT_COMA            : 1 5 31 32 33 34 37 38 39 40 41
READ                 : 39
RETURN               : 37 38
RIGHTCURLY           : 20
RIGHTPAREN           : 13 33 34 39 40 41 42 43 45 55
RIGHTSQUARE          : 7 32
THEN                 : 42 43
TO                   : 44
VARS                 : 2
VOID                 : 11
WHILE                : 45
WRITE                : 40 41
error                : 

Nonterminals, with rules where they appear

arg_list             : 33 35
assignment           : 23
block                : 1 13 42 43 43 44 45
decision_statement   : 28
empty                : 3 16
expr                 : 31 32 32 35 36 37 40 42 43 44 44 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56
function             : 1
function_call        : 24
param                : 14 15
param_list           : 13 14
program              : 0
read_statement       : 26
repetition_statement : 29
return_statement     : 25
statement            : 21 22
statement_list       : 20 21
type                 : 6 7 13
var                  : 4 5
var_list             : 2 4
vars                 : 1 13 30
write_statement      : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PUNT_COMA vars function MAIN block

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PUNT_COMA vars function MAIN block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PUNT_COMA vars function MAIN block

    PUNT_COMA       shift and go to state 4


state 4

    (1) program -> PROGRAM ID PUNT_COMA . vars function MAIN block
    (2) vars -> . VARS var_list
    (3) vars -> . empty
    (12) empty -> .

    VARS            shift and go to state 6
    FUNCTION        reduce using rule 12 (empty -> .)

    vars                           shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID PUNT_COMA vars . function MAIN block
    (13) function -> . FUNCTION type ID LEFTPAREN param_list RIGHTPAREN vars block

    FUNCTION        shift and go to state 9

    function                       shift and go to state 8

state 6

    (2) vars -> VARS . var_list
    (4) var_list -> . var_list COMA var
    (5) var_list -> . var PUNT_COMA
    (6) var -> . type ID
    (7) var -> . type LEFTSQUARE NUMBER RIGHTSQUARE ID
    (8) type -> . INT
    (9) type -> . FLOT
    (10) type -> . CHAR
    (11) type -> . VOID

    INT             shift and go to state 13
    FLOT            shift and go to state 14
    CHAR            shift and go to state 15
    VOID            shift and go to state 16

    var_list                       shift and go to state 10
    var                            shift and go to state 11
    type                           shift and go to state 12

state 7

    (3) vars -> empty .

    FUNCTION        reduce using rule 3 (vars -> empty .)
    RIGHTCURLY      reduce using rule 3 (vars -> empty .)
    ID              reduce using rule 3 (vars -> empty .)
    RETURN          reduce using rule 3 (vars -> empty .)
    READ            reduce using rule 3 (vars -> empty .)
    WRITE           reduce using rule 3 (vars -> empty .)
    IF              reduce using rule 3 (vars -> empty .)
    FOR             reduce using rule 3 (vars -> empty .)
    WHILE           reduce using rule 3 (vars -> empty .)
    VARS            reduce using rule 3 (vars -> empty .)
    LEFTCURLY       reduce using rule 3 (vars -> empty .)


state 8

    (1) program -> PROGRAM ID PUNT_COMA vars function . MAIN block

    MAIN            shift and go to state 17


state 9

    (13) function -> FUNCTION . type ID LEFTPAREN param_list RIGHTPAREN vars block
    (8) type -> . INT
    (9) type -> . FLOT
    (10) type -> . CHAR
    (11) type -> . VOID

    INT             shift and go to state 13
    FLOT            shift and go to state 14
    CHAR            shift and go to state 15
    VOID            shift and go to state 16

    type                           shift and go to state 18

state 10

    (2) vars -> VARS var_list .
    (4) var_list -> var_list . COMA var

    FUNCTION        reduce using rule 2 (vars -> VARS var_list .)
    RIGHTCURLY      reduce using rule 2 (vars -> VARS var_list .)
    ID              reduce using rule 2 (vars -> VARS var_list .)
    RETURN          reduce using rule 2 (vars -> VARS var_list .)
    READ            reduce using rule 2 (vars -> VARS var_list .)
    WRITE           reduce using rule 2 (vars -> VARS var_list .)
    IF              reduce using rule 2 (vars -> VARS var_list .)
    FOR             reduce using rule 2 (vars -> VARS var_list .)
    WHILE           reduce using rule 2 (vars -> VARS var_list .)
    VARS            reduce using rule 2 (vars -> VARS var_list .)
    LEFTCURLY       reduce using rule 2 (vars -> VARS var_list .)
    COMA            shift and go to state 19


state 11

    (5) var_list -> var . PUNT_COMA

    PUNT_COMA       shift and go to state 20


state 12

    (6) var -> type . ID
    (7) var -> type . LEFTSQUARE NUMBER RIGHTSQUARE ID

    ID              shift and go to state 21
    LEFTSQUARE      shift and go to state 22


state 13

    (8) type -> INT .

    ID              reduce using rule 8 (type -> INT .)
    LEFTSQUARE      reduce using rule 8 (type -> INT .)


state 14

    (9) type -> FLOT .

    ID              reduce using rule 9 (type -> FLOT .)
    LEFTSQUARE      reduce using rule 9 (type -> FLOT .)


state 15

    (10) type -> CHAR .

    ID              reduce using rule 10 (type -> CHAR .)
    LEFTSQUARE      reduce using rule 10 (type -> CHAR .)


state 16

    (11) type -> VOID .

    ID              reduce using rule 11 (type -> VOID .)
    LEFTSQUARE      reduce using rule 11 (type -> VOID .)


state 17

    (1) program -> PROGRAM ID PUNT_COMA vars function MAIN . block
    (20) block -> . LEFTCURLY statement_list RIGHTCURLY

    LEFTCURLY       shift and go to state 24

    block                          shift and go to state 23

state 18

    (13) function -> FUNCTION type . ID LEFTPAREN param_list RIGHTPAREN vars block

    ID              shift and go to state 25


state 19

    (4) var_list -> var_list COMA . var
    (6) var -> . type ID
    (7) var -> . type LEFTSQUARE NUMBER RIGHTSQUARE ID
    (8) type -> . INT
    (9) type -> . FLOT
    (10) type -> . CHAR
    (11) type -> . VOID

    INT             shift and go to state 13
    FLOT            shift and go to state 14
    CHAR            shift and go to state 15
    VOID            shift and go to state 16

    var                            shift and go to state 26
    type                           shift and go to state 12

state 20

    (5) var_list -> var PUNT_COMA .

    COMA            reduce using rule 5 (var_list -> var PUNT_COMA .)
    FUNCTION        reduce using rule 5 (var_list -> var PUNT_COMA .)
    RIGHTCURLY      reduce using rule 5 (var_list -> var PUNT_COMA .)
    ID              reduce using rule 5 (var_list -> var PUNT_COMA .)
    RETURN          reduce using rule 5 (var_list -> var PUNT_COMA .)
    READ            reduce using rule 5 (var_list -> var PUNT_COMA .)
    WRITE           reduce using rule 5 (var_list -> var PUNT_COMA .)
    IF              reduce using rule 5 (var_list -> var PUNT_COMA .)
    FOR             reduce using rule 5 (var_list -> var PUNT_COMA .)
    WHILE           reduce using rule 5 (var_list -> var PUNT_COMA .)
    VARS            reduce using rule 5 (var_list -> var PUNT_COMA .)
    LEFTCURLY       reduce using rule 5 (var_list -> var PUNT_COMA .)


state 21

    (6) var -> type ID .

    PUNT_COMA       reduce using rule 6 (var -> type ID .)
    COMA            reduce using rule 6 (var -> type ID .)
    FUNCTION        reduce using rule 6 (var -> type ID .)
    RIGHTCURLY      reduce using rule 6 (var -> type ID .)
    ID              reduce using rule 6 (var -> type ID .)
    RETURN          reduce using rule 6 (var -> type ID .)
    READ            reduce using rule 6 (var -> type ID .)
    WRITE           reduce using rule 6 (var -> type ID .)
    IF              reduce using rule 6 (var -> type ID .)
    FOR             reduce using rule 6 (var -> type ID .)
    WHILE           reduce using rule 6 (var -> type ID .)
    VARS            reduce using rule 6 (var -> type ID .)
    LEFTCURLY       reduce using rule 6 (var -> type ID .)


state 22

    (7) var -> type LEFTSQUARE . NUMBER RIGHTSQUARE ID

    NUMBER          shift and go to state 27


state 23

    (1) program -> PROGRAM ID PUNT_COMA vars function MAIN block .

    $end            reduce using rule 1 (program -> PROGRAM ID PUNT_COMA vars function MAIN block .)


state 24

    (20) block -> LEFTCURLY . statement_list RIGHTCURLY
    (21) statement_list -> . statement_list statement
    (22) statement_list -> . statement
    (23) statement -> . assignment
    (24) statement -> . function_call
    (25) statement -> . return_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) statement -> . decision_statement
    (29) statement -> . repetition_statement
    (30) statement -> . vars
    (31) assignment -> . ID EQUALS expr PUNT_COMA
    (32) assignment -> . ID LEFTSQUARE expr RIGHTSQUARE EQUALS expr PUNT_COMA
    (33) function_call -> . ID LEFTPAREN arg_list RIGHTPAREN PUNT_COMA
    (34) function_call -> . ID LEFTPAREN RIGHTPAREN PUNT_COMA
    (37) return_statement -> . RETURN expr PUNT_COMA
    (38) return_statement -> . RETURN PUNT_COMA
    (39) read_statement -> . READ LEFTPAREN ID RIGHTPAREN PUNT_COMA
    (40) write_statement -> . WRITE LEFTPAREN expr RIGHTPAREN PUNT_COMA
    (41) write_statement -> . WRITE LEFTPAREN RIGHTPAREN PUNT_COMA
    (42) decision_statement -> . IF LEFTPAREN expr RIGHTPAREN THEN block
    (43) decision_statement -> . IF LEFTPAREN expr RIGHTPAREN THEN block ELSE block
    (44) repetition_statement -> . FOR ID EQUALS expr TO expr DO block
    (45) repetition_statement -> . WHILE LEFTPAREN expr RIGHTPAREN DO block
    (2) vars -> . VARS var_list
    (3) vars -> . empty
    (12) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for VARS resolved as shift
    ID              shift and go to state 38
    RETURN          shift and go to state 39
    READ            shift and go to state 40
    WRITE           shift and go to state 41
    IF              shift and go to state 42
    FOR             shift and go to state 43
    WHILE           shift and go to state 44
    VARS            shift and go to state 6
    RIGHTCURLY      reduce using rule 12 (empty -> .)

  ! ID              [ reduce using rule 12 (empty -> .) ]
  ! RETURN          [ reduce using rule 12 (empty -> .) ]
  ! READ            [ reduce using rule 12 (empty -> .) ]
  ! WRITE           [ reduce using rule 12 (empty -> .) ]
  ! IF              [ reduce using rule 12 (empty -> .) ]
  ! FOR             [ reduce using rule 12 (empty -> .) ]
  ! WHILE           [ reduce using rule 12 (empty -> .) ]
  ! VARS            [ reduce using rule 12 (empty -> .) ]

    statement_list                 shift and go to state 28
    statement                      shift and go to state 29
    assignment                     shift and go to state 30
    function_call                  shift and go to state 31
    return_statement               shift and go to state 32
    read_statement                 shift and go to state 33
    write_statement                shift and go to state 34
    decision_statement             shift and go to state 35
    repetition_statement           shift and go to state 36
    vars                           shift and go to state 37
    empty                          shift and go to state 7

state 25

    (13) function -> FUNCTION type ID . LEFTPAREN param_list RIGHTPAREN vars block

    LEFTPAREN       shift and go to state 45


state 26

    (4) var_list -> var_list COMA var .

    COMA            reduce using rule 4 (var_list -> var_list COMA var .)
    FUNCTION        reduce using rule 4 (var_list -> var_list COMA var .)
    RIGHTCURLY      reduce using rule 4 (var_list -> var_list COMA var .)
    ID              reduce using rule 4 (var_list -> var_list COMA var .)
    RETURN          reduce using rule 4 (var_list -> var_list COMA var .)
    READ            reduce using rule 4 (var_list -> var_list COMA var .)
    WRITE           reduce using rule 4 (var_list -> var_list COMA var .)
    IF              reduce using rule 4 (var_list -> var_list COMA var .)
    FOR             reduce using rule 4 (var_list -> var_list COMA var .)
    WHILE           reduce using rule 4 (var_list -> var_list COMA var .)
    VARS            reduce using rule 4 (var_list -> var_list COMA var .)
    LEFTCURLY       reduce using rule 4 (var_list -> var_list COMA var .)


state 27

    (7) var -> type LEFTSQUARE NUMBER . RIGHTSQUARE ID

    RIGHTSQUARE     shift and go to state 46


state 28

    (20) block -> LEFTCURLY statement_list . RIGHTCURLY
    (21) statement_list -> statement_list . statement
    (23) statement -> . assignment
    (24) statement -> . function_call
    (25) statement -> . return_statement
    (26) statement -> . read_statement
    (27) statement -> . write_statement
    (28) statement -> . decision_statement
    (29) statement -> . repetition_statement
    (30) statement -> . vars
    (31) assignment -> . ID EQUALS expr PUNT_COMA
    (32) assignment -> . ID LEFTSQUARE expr RIGHTSQUARE EQUALS expr PUNT_COMA
    (33) function_call -> . ID LEFTPAREN arg_list RIGHTPAREN PUNT_COMA
    (34) function_call -> . ID LEFTPAREN RIGHTPAREN PUNT_COMA
    (37) return_statement -> . RETURN expr PUNT_COMA
    (38) return_statement -> . RETURN PUNT_COMA
    (39) read_statement -> . READ LEFTPAREN ID RIGHTPAREN PUNT_COMA
    (40) write_statement -> . WRITE LEFTPAREN expr RIGHTPAREN PUNT_COMA
    (41) write_statement -> . WRITE LEFTPAREN RIGHTPAREN PUNT_COMA
    (42) decision_statement -> . IF LEFTPAREN expr RIGHTPAREN THEN block
    (43) decision_statement -> . IF LEFTPAREN expr RIGHTPAREN THEN block ELSE block
    (44) repetition_statement -> . FOR ID EQUALS expr TO expr DO block
    (45) repetition_statement -> . WHILE LEFTPAREN expr RIGHTPAREN DO block
    (2) vars -> . VARS var_list
    (3) vars -> . empty
    (12) empty -> .

  ! shift/reduce conflict for RIGHTCURLY resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for VARS resolved as shift
    RIGHTCURLY      shift and go to state 47
    ID              shift and go to state 38
    RETURN          shift and go to state 39
    READ            shift and go to state 40
    WRITE           shift and go to state 41
    IF              shift and go to state 42
    FOR             shift and go to state 43
    WHILE           shift and go to state 44
    VARS            shift and go to state 6

  ! RIGHTCURLY      [ reduce using rule 12 (empty -> .) ]
  ! ID              [ reduce using rule 12 (empty -> .) ]
  ! RETURN          [ reduce using rule 12 (empty -> .) ]
  ! READ            [ reduce using rule 12 (empty -> .) ]
  ! WRITE           [ reduce using rule 12 (empty -> .) ]
  ! IF              [ reduce using rule 12 (empty -> .) ]
  ! FOR             [ reduce using rule 12 (empty -> .) ]
  ! WHILE           [ reduce using rule 12 (empty -> .) ]
  ! VARS            [ reduce using rule 12 (empty -> .) ]

    statement                      shift and go to state 48
    assignment                     shift and go to state 30
    function_call                  shift and go to state 31
    return_statement               shift and go to state 32
    read_statement                 shift and go to state 33
    write_statement                shift and go to state 34
    decision_statement             shift and go to state 35
    repetition_statement           shift and go to state 36
    vars                           shift and go to state 37
    empty                          shift and go to state 7

state 29

    (22) statement_list -> statement .

    RIGHTCURLY      reduce using rule 22 (statement_list -> statement .)
    ID              reduce using rule 22 (statement_list -> statement .)
    RETURN          reduce using rule 22 (statement_list -> statement .)
    READ            reduce using rule 22 (statement_list -> statement .)
    WRITE           reduce using rule 22 (statement_list -> statement .)
    IF              reduce using rule 22 (statement_list -> statement .)
    FOR             reduce using rule 22 (statement_list -> statement .)
    WHILE           reduce using rule 22 (statement_list -> statement .)
    VARS            reduce using rule 22 (statement_list -> statement .)


state 30

    (23) statement -> assignment .

    RIGHTCURLY      reduce using rule 23 (statement -> assignment .)
    ID              reduce using rule 23 (statement -> assignment .)
    RETURN          reduce using rule 23 (statement -> assignment .)
    READ            reduce using rule 23 (statement -> assignment .)
    WRITE           reduce using rule 23 (statement -> assignment .)
    IF              reduce using rule 23 (statement -> assignment .)
    FOR             reduce using rule 23 (statement -> assignment .)
    WHILE           reduce using rule 23 (statement -> assignment .)
    VARS            reduce using rule 23 (statement -> assignment .)


state 31

    (24) statement -> function_call .

    RIGHTCURLY      reduce using rule 24 (statement -> function_call .)
    ID              reduce using rule 24 (statement -> function_call .)
    RETURN          reduce using rule 24 (statement -> function_call .)
    READ            reduce using rule 24 (statement -> function_call .)
    WRITE           reduce using rule 24 (statement -> function_call .)
    IF              reduce using rule 24 (statement -> function_call .)
    FOR             reduce using rule 24 (statement -> function_call .)
    WHILE           reduce using rule 24 (statement -> function_call .)
    VARS            reduce using rule 24 (statement -> function_call .)


state 32

    (25) statement -> return_statement .

    RIGHTCURLY      reduce using rule 25 (statement -> return_statement .)
    ID              reduce using rule 25 (statement -> return_statement .)
    RETURN          reduce using rule 25 (statement -> return_statement .)
    READ            reduce using rule 25 (statement -> return_statement .)
    WRITE           reduce using rule 25 (statement -> return_statement .)
    IF              reduce using rule 25 (statement -> return_statement .)
    FOR             reduce using rule 25 (statement -> return_statement .)
    WHILE           reduce using rule 25 (statement -> return_statement .)
    VARS            reduce using rule 25 (statement -> return_statement .)


state 33

    (26) statement -> read_statement .

    RIGHTCURLY      reduce using rule 26 (statement -> read_statement .)
    ID              reduce using rule 26 (statement -> read_statement .)
    RETURN          reduce using rule 26 (statement -> read_statement .)
    READ            reduce using rule 26 (statement -> read_statement .)
    WRITE           reduce using rule 26 (statement -> read_statement .)
    IF              reduce using rule 26 (statement -> read_statement .)
    FOR             reduce using rule 26 (statement -> read_statement .)
    WHILE           reduce using rule 26 (statement -> read_statement .)
    VARS            reduce using rule 26 (statement -> read_statement .)


state 34

    (27) statement -> write_statement .

    RIGHTCURLY      reduce using rule 27 (statement -> write_statement .)
    ID              reduce using rule 27 (statement -> write_statement .)
